--- a/demo-page/css.css
+++ b/demo-page/css.css
@@ -73,8 +73,8 @@ body {
 }
 .editable {
   min-height: 40px;
-  padding: 8px;
-  display: flex;
+  /* padding: 8px;
+  display: flex; */
   border: 1px dashed transparent;
   position: relative;
   cursor: pointer;
