--- a/demo-page/list-page/css.css
+++ b/demo-page/list-page/css.css
@@ -1,3 +1,11 @@
+
+div { 
+  font-family: Roboto, sans-serif;
+}
+a {
+  font-family: Roboto, sans-serif;
+}
+
 #list-table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -17,12 +25,14 @@
     font-size: 0.875rem;
     padding: 12px;
     border-top-color: rgb(240, 240, 240);
-    border-right-color: rgb(240, 240, 240);
-    border-left-color: rgb(240, 240, 240);
+    border-right: none;
+    border-left: none;
     position: relative;
 }
 
-/* #list-table tr:nth-child(even){background-color: #f2f2f2;} */
+/* #list-table tr {
+  border: none;
+} */
 
 #list-table tr:hover {background-color: rgb(245, 245, 245);}
 
@@ -130,7 +140,7 @@
   transition: width 150ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
 .toolbar-container {
-  height: 64px;
+  height: 36px;
   position: relative;
   padding: 16px;
   display: flex;
@@ -173,4 +183,217 @@
   min-width: -webkit-max-content;
   min-width: -moz-max-content;
   min-width: max-content;
+}
+
+
+nav.primary-navigation {
+  margin: 0 auto;
+  display: block;
+  padding: 0;  
+  text-align: center;
+  /* Body 14/Regular */
+  font-family: Public Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
+}
+
+nav.primary-navigation li {
+  list-style: none;
+  margin: 0 auto;
+  display: inline-block;
+  padding: 8px 16px;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  font-family: arvo;
+  margin:0;
+  z-index: 1300;
+}
+nav.primary-navigation ul {
+  list-style: none;
+  margin: 0 auto;
+  display: inline-block;
+  padding: 0;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  font-family: arvo;
+  margin:0;
+}
+
+nav.primary-navigation li a {
+  color: black;
+}
+
+nav.primary-navigation li a:hover {
+  color: #3ca0e7;
+}
+
+
+nav.primary-navigation li:hover {
+  cursor: pointer;
+  text-decoration: none;
+  /* background-color: rgba(0, 0, 0, 0.04); */
+}
+nav.primary-navigation ul li ul {
+  visibility: hidden;
+  opacity: 1;
+  position: absolute;
+  padding-left: 0;
+  left: 0;
+  display: none;
+  background: white;
+}
+
+nav.primary-navigation ul li:focus-within > ul,
+nav.primary-navigation ul li ul:focus {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+  min-width: 250px;
+  text-align: left;
+  padding-top: 20px;
+  box-shadow: 0px 3px 5px -1px #ccc;
+}
+
+nav.primary-navigation ul li ul:focus {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+  min-width: 250px;
+  text-align: left;
+  padding-top: 20px;
+  box-shadow: 0px 3px 5px -1px #ccc;
+}
+nav.primary-navigation ul li ul li {
+  clear: both;
+  width: 100%;
+  text-align: left;
+  border-style: none;
+}
+/* nav.primary-navigation ul li ul li a:hover {
+  text-decoration: none;
+
+  background-color: rgba(0, 0, 0, 0.04);
+} */
+a {
+
+    text-decoration: none;
+
+}
+a:hover {
+  color: #3CA0E7;
+}
+
+ ul li ul li a { transition: all 0.5s ease; }
+.dropdown {
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+  color: rgb(38, 38, 38);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 4px;
+  box-shadow: rgb(217 217 217) 0px 0px 0px 1px, rgb(109 110 111 / 8%) 0px 5px 20px 0px;
+}
+
+.priority-chip{
+  max-width: 100%;
+  font-family: Roboto,sans-serif;
+  font-size: 0.8705357142857143rem;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  height: 24px;
+  color: #262626;
+  background-color: rgba(0, 0, 0, 0.08);
+  border-radius: 16px;
+  white-space: nowrap;
+  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  cursor: default;
+  outline: 0;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  border: 0;
+  padding: 0;
+  vertical-align: middle;
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: #1890ff;
+  background-color: #e6f7ff;
+}
+.chip-title{
+  overflow: hidden;
+    text-overflow: ellipsis;
+    padding-left: 8px;
+    padding-right: 8px;
+    white-space: nowrap;
+}
+.footer-list {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: end;
+  justify-content: flex-end;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-bottom: 24px;
+}
+.pagination-container {
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  margin-top:5px;
+}
+.page-size-box{
+  margin-left: 8px;
+  margin-right: 8px
+}
+.typography {
+  margin: 0px;
+  font-size: 0.875rem;
+  line-height: 1.57;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+}
+.pagination-btn {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  text-align: center;
+  flex: 0 0 auto;
+  padding: 8px;
+  overflow: visible;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  width: 36px;
+  height: 36px;
+  font-size: 1rem;
+  position: relative;
+  border-radius: 50%;
+  color: rgb(217, 217, 217);
 }
