--- a/demo-page/write-page/style.css
+++ b/demo-page/write-page/style.css
@@ -4,13 +4,34 @@
 body {
   margin: 0;
 }
+div {
+  font-family: Roboto, sans-serif;
+}
+.form-container{
+  min-height: 100vh;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+.form-field {
+  display:flex;
+  flex-direction:column;
+  padding-top:8px;
+  padding-right:8px;
+  padding-bottom:8px;
+  padding-left: 0px;
+  row-gap:10px;
+  column-gap:10px;
+  width:100%;
+}
 .form-container select,input {
+  padding: 10.5px 14px 10.5px 12px;
   display: block;
   color: #212529;
   background-color: #FFFFFF;
   background-clip: padding-box;
   appearance: none;
-  padding: 0.375rem 0.75rem;
   border-radius: 0.25rem;
   border: 1px solid #CED4DA;
   border-radius: 0.25rem;
@@ -40,13 +61,7 @@ body {
   flex-grow:1;
   flex-basis:100%;
 }
-#ih8p{
-  min-height:100vh;
-  padding-top:10px;
-  padding-right:10px;
-  padding-bottom:10px;
-  padding-left:10px;
-}
+
 .form-row {
   min-height:60px;
   width:100%;
@@ -57,25 +72,17 @@ body {
   margin-right:0px;
   margin-bottom:0px;
   margin-left:0px;
-  padding-top:10px;
-  padding-right:10px;
-  padding-bottom:10px;
-  padding-left:10px;
+  padding-top:5px;
+  padding-right:  10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
   overflow-x:hidden;
   overflow-y:hidden;
-  padding:10px;
   overflow:hidden;
 }
-#ith43{
-  display:flex;
-  flex-direction:column;
-  padding-top:8px;
-  padding-right:8px;
-  padding-bottom:8px;
-  padding-left:8px;
-  row-gap:10px;
-  column-gap:10px;
-  width:100%;
+.required-field {
+  color: red;
+  margin-left: 3px;
 }
 
 #i1dmk{
@@ -102,35 +109,24 @@ body {
 }
 
 
-#iqkyl{
+/* #iqkyl{
   min-height:60px;
   width:100%;
   display:flex;
   position:relative;
-  height:82.5559px;
   color:black;
   overflow-x:hidden;
   overflow-y:hidden;
-  padding:10px 10px 10px 0px;
+  padding:5px 10px 10px 0px;
   overflow:hidden;
-}
+} */
 #inkxg{
   padding-top:10px;
   padding-right:10px;
   padding-bottom:10px;
   padding-left:10px;
 }
-#ie098{
-  display:flex;
-  flex-direction:column;
-  padding-top:8px;
-  padding-right:8px;
-  padding-bottom:8px;
-  padding-left:8px;
-  row-gap:10px;
-  column-gap:10px;
-  width:100%;
-}
+
 #inojh{
   padding-top:10px;
   padding-right:10px;
@@ -142,7 +138,6 @@ body {
   width:100%;
   display:flex;
   position:relative;
-  height:151.667px;
   overflow-x:hidden;
   overflow-y:hidden;
   padding:10px 10px 10px 0px;
