--- a/demo-page/list-page/css.css
+++ b/demo-page/list-page/css.css
@@ -397,3 +397,60 @@ a:hover {
   border-radius: 50%;
   color: rgb(217, 217, 217);
 }
+
+.bottom-toolbar-container {
+  max-width: 100%;
+  padding: 0px 10px;
+  height:44px;
+  display: flex;
+  align-items: center;
+  /* position: absolute;
+  top: 108px;
+  right: 0px;
+  left: 0px; */
+  z-index: 1100;
+  transition: all 0.1s ease 0s;
+  background-color: rgb(240, 240, 240);
+}
+.bottom-toolbar-btn {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  outline: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-family: Roboto, sans-serif;
+  font-size: 0.870536rem;
+  line-height: 1.75;
+  min-width: 64px;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition-duration: 250ms, 250ms, 250ms, 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0ms, 0ms, 0ms, 0ms;
+  transition-property: background-color, box-shadow, border-color, color;
+  color: inherit;
+  font-weight: 400;
+  box-shadow: none;
+  border: 1px solid transparent;
+  padding: 0.2rem 0.9rem;
+  position: relative;
+}
+
+.bottom-toolbar-btn:hover{
+  border: 1px solid;
+}
+
+.hidden{
+  display: none;
+}
