--- a/demo-page/list-page/css.css
+++ b/demo-page/list-page/css.css
@@ -1,9 +1,20 @@
+* {
+  box-sizing: border-box;
+}
 
-div { 
+div {
   font-family: Roboto, sans-serif;
 }
+
 a {
   font-family: Roboto, sans-serif;
+}
+
+.container {
+  margin: 22px;
+  overflow-x: hidden;
+  position: relative;
+  height: calc(100vh - 100px);
 }
 
 #list-table {
@@ -15,26 +26,28 @@ a {
 #list-table td {
   border: 1px solid #ddd;
   line-height: 1.66;
-    font-family: Roboto, sans-serif;
-    font-weight: 400;
-    display: table-cell;
-    vertical-align: inherit;
-    border-bottom: 1px solid rgb(240, 240, 240);
-    text-align: left;
-    color: rgb(38, 38, 38);
-    font-size: 0.875rem;
-    padding: 12px;
-    border-top-color: rgb(240, 240, 240);
-    border-right: none;
-    border-left: none;
-    position: relative;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  display: table-cell;
+  vertical-align: inherit;
+  border-bottom: 1px solid rgb(240, 240, 240);
+  text-align: left;
+  color: rgb(38, 38, 38);
+  font-size: 0.875rem;
+  padding: 12px;
+  border-top-color: rgb(240, 240, 240);
+  border-right: none;
+  border-left: none;
+  position: relative;
 }
 
 /* #list-table tr {
   border: none;
 } */
 
-#list-table tr:hover {background-color: rgb(245, 245, 245);}
+#list-table tr:hover {
+  background-color: rgb(245, 245, 245);
+}
 
 #list-table th {
   background-color: rgb(250, 250, 250);
@@ -58,9 +71,10 @@ a {
 }
 
 
-.search-container:focus{
+.search-container:focus {
   box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
 }
+
 .search-container {
   font-size: 0.75rem;
   line-height: 1.4375em;
@@ -75,6 +89,7 @@ a {
   border-radius: 4px;
   padding-right: 8px;
 }
+
 .search-input {
   font: inherit;
   letter-spacing: inherit;
@@ -100,9 +115,11 @@ a {
   padding: 7.5px 8px 7.5px 12px;
   font-family: Roboto, sans-serif
 }
-.search-input:focus{
+
+.search-input:focus {
   outline: 0
 }
+
 #search-icon {
   user-select: none;
   width: 1em;
@@ -113,6 +130,7 @@ a {
   transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   font-size: 1.33929rem;
 }
+
 .search-icon-box {
   text-align: left;
   position: absolute;
@@ -131,6 +149,7 @@ a {
   border-color: rgba(0, 0, 0, 0.23);
   border-color: #d9d9d9;
 }
+
 #i0q4o {
   float: unset;
   width: auto;
@@ -139,13 +158,14 @@ a {
   line-height: 11px;
   transition: width 150ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
+
 .toolbar-container {
-  height: 36px;
+  height: 48px;
   position: relative;
-  padding: 16px;
+  padding: 16px 8px;
   display: flex;
   align-items: center;
-  max-height: 64px;
+
 }
 
 .toolbar-container-right {
@@ -153,6 +173,7 @@ a {
   align-items: center;
   margin-left: auto;
 }
+
 .title-text {
   margin: 0;
   font-family: inherit;
@@ -189,28 +210,30 @@ a {
 nav.primary-navigation {
   margin: 0 auto;
   display: block;
-  padding: 0;  
+  padding: 0;
   text-align: center;
   /* Body 14/Regular */
   font-family: Public Sans;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px; /* 157.143% */
+  line-height: 22px;
+  /* 157.143% */
 }
 
 nav.primary-navigation li {
   list-style: none;
   margin: 0 auto;
   display: inline-block;
-  padding: 8px 16px;
+  padding: 8px;
   position: relative;
   text-decoration: none;
   text-align: center;
   font-family: arvo;
-  margin:0;
+  margin: 0;
   z-index: 1300;
 }
+
 nav.primary-navigation ul {
   list-style: none;
   margin: 0 auto;
@@ -220,7 +243,7 @@ nav.primary-navigation ul {
   text-decoration: none;
   text-align: center;
   font-family: arvo;
-  margin:0;
+  margin: 0;
 }
 
 nav.primary-navigation li a {
@@ -235,8 +258,10 @@ nav.primary-navigation li a:hover {
 nav.primary-navigation li:hover {
   cursor: pointer;
   text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.04);
   /* background-color: rgba(0, 0, 0, 0.04); */
 }
+
 nav.primary-navigation ul li ul {
   visibility: hidden;
   opacity: 1;
@@ -247,8 +272,8 @@ nav.primary-navigation ul li ul {
   background: white;
 }
 
-nav.primary-navigation ul li:focus-within > ul,
-nav.primary-navigation ul li ul:focus {
+nav.primary-navigation ul li:focus-within .dropdown,
+nav.primary-navigation ul li .dropdown:focus {
   visibility: visible;
   opacity: 1;
   display: block;
@@ -267,12 +292,14 @@ nav.primary-navigation ul li ul:focus {
   padding-top: 20px;
   box-shadow: 0px 3px 5px -1px #ccc;
 }
+
 nav.primary-navigation ul li ul li {
   clear: both;
   width: 100%;
   text-align: left;
   border-style: none;
 }
+
 /* nav.primary-navigation ul li ul li a:hover {
   text-decoration: none;
 
@@ -280,14 +307,18 @@ nav.primary-navigation ul li ul li {
 } */
 a {
 
-    text-decoration: none;
+  text-decoration: none;
 
 }
+
 a:hover {
   color: #3CA0E7;
 }
 
- ul li ul li a { transition: all 0.5s ease; }
+ul li ul li a {
+  transition: all 0.5s ease;
+}
+
 .dropdown {
   overflow: hidden;
   background-color: rgb(255, 255, 255);
@@ -297,9 +328,13 @@ a:hover {
   box-shadow: rgb(217 217 217) 0px 0px 0px 1px, rgb(109 110 111 / 8%) 0px 5px 20px 0px;
 }
 
-.priority-chip{
+.dropdown .selected {
+  background: rgba(0, 0, 0, 0.08)
+}
+
+.priority-chip {
   max-width: 100%;
-  font-family: Roboto,sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 0.8705357142857143rem;
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
@@ -318,8 +353,8 @@ a:hover {
   background-color: rgba(0, 0, 0, 0.08);
   border-radius: 16px;
   white-space: nowrap;
-  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   cursor: default;
   outline: 0;
   -webkit-text-decoration: none;
@@ -332,13 +367,15 @@ a:hover {
   color: #1890ff;
   background-color: #e6f7ff;
 }
-.chip-title{
+
+.chip-title {
   overflow: hidden;
-    text-overflow: ellipsis;
-    padding-left: 8px;
-    padding-right: 8px;
-    white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-left: 8px;
+  padding-right: 8px;
+  white-space: nowrap;
 }
+
 .footer-list {
   display: flex;
   flex-direction: row;
@@ -350,17 +387,20 @@ a:hover {
   padding-right: 8px;
   margin-bottom: 24px;
 }
+
 .pagination-container {
   display: flex;
   flex-direction: row;
   -webkit-box-align: center;
   align-items: center;
-  margin-top:5px;
+  margin-top: 5px;
 }
-.page-size-box{
+
+.page-size-box {
   margin-left: 8px;
   margin-right: 8px
 }
+
 .typography {
   margin: 0px;
   font-size: 0.875rem;
@@ -368,6 +408,7 @@ a:hover {
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
+
 .pagination-btn {
   display: inline-flex;
   -webkit-box-align: center;
@@ -399,19 +440,22 @@ a:hover {
 }
 
 .bottom-toolbar-container {
-  max-width: 100%;
-  padding: 0px 10px;
-  height:44px;
+  width: 100%;
+  padding: 0px 22px;
+  height: 44px;
   display: flex;
   align-items: center;
+  position: absolute;
+  top: 0px;
   /* position: absolute;
   top: 108px;
   right: 0px;
   left: 0px; */
-  z-index: 1100;
+  z-index: 1400;
   transition: all 0.1s ease 0s;
   background-color: rgb(240, 240, 240);
 }
+
 .bottom-toolbar-btn {
   display: inline-flex;
   -webkit-box-align: center;
@@ -447,10 +491,109 @@ a:hover {
   position: relative;
 }
 
-.bottom-toolbar-btn:hover{
+.bottom-toolbar-btn:hover {
   border: 1px solid;
 }
 
-.hidden{
+.hidden {
   display: none !important;
+}
+
+.filter {
+  display: block;
+}
+
+details[open] summary~* {
+  animation: open 0.3s ease-in-out;
+}
+
+@keyframes open {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+details summary {
+  width: 100%;
+  padding: 0.5rem 0;
+  position: relative;
+  cursor: pointer;
+  list-style: none;
+}
+
+details summary:after {
+  content: ">";
+  color: black;
+  position: absolute;
+  line-height: 0;
+  margin-top: 0.75rem;
+  right: 0;
+  font-weight: 200;
+  transform-origin: center;
+  transition: 200ms linear;
+}
+
+details[open] summary:after {
+  transform: rotate(90deg);
+
+}
+
+details summary {
+  outline: 0;
+}
+
+details p {
+  font-size: 0.95rem;
+  margin: 0 0 1rem;
+  padding-top: 1rem;
+}
+
+.button-group {
+  display: flex;
+height: 50px;
+padding: 0px 10px 0px 30px;
+justify-content: flex-end;
+align-items: center;
+gap: 7px;
+align-self: stretch;
+border-top: 0.1px solid var(--icon, rgba(0, 0, 0, 0.54));
+}
+
+.button-group #buttonCloseDialog {
+  display: flex;
+  width: 64px;
+  height: 30px;
+  padding: 9px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #D9D9D9;
+  background: #FFF;
+  /* drop-shadow / button-secondary */
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.02);
+  cursor: pointer;
+}
+
+.button-group #buttonSaveDialog {
+  display: flex;
+  width: 64px;
+  height: 30px;
+  padding: 9px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+border-radius: 4px;
+border: 1px solid #1890FF;
+background: #1890FF;
+box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.02);
+cursor: pointer;
 }
