--- a/demo-page/components/autocomplete/css.css
+++ b/demo-page/components/autocomplete/css.css
@@ -212,3 +212,53 @@ input[type=submit] {
     margin: 0px 5px 0px -6px;
 }
 
+.priority-chip {
+  max-width: 100%;
+  font-family: Roboto, sans-serif;
+  font-size: 0.8705357142857143rem;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  height: 24px;
+  color: #262626;
+  background-color: rgba(0, 0, 0, 0.08);
+  border-radius: 16px;
+  white-space: nowrap;
+  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  cursor: default;
+  outline: 0;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  border: 0;
+  padding: 0;
+  vertical-align: middle;
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: #1890ff;
+  background-color: #e6f7ff;
+}
+.color-error {
+  color: rgb(255, 77, 79);
+  background-color: rgb(255, 241, 240);
+}
+.color-warning {
+  color: rgb(250, 173, 20);
+  background-color: rgb(255, 251, 230);
+}
+.chip-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 8px;
+  padding-right: 8px;
+  white-space: nowrap;
+}
