--- a/demo-page/components/autocomplete/index.html
+++ b/demo-page/components/autocomplete/index.html
@@ -3,6 +3,7 @@
     <title>Desk ticket</title>
     <link rel="stylesheet" href="./css.css">
     <link rel="stylesheet" href="./webkit_toolbar.css">
+    
     <style>
       @import url(https://fonts.bunny.net/css?family=roboto:300,400,500,700);
     </style>
@@ -33,7 +34,6 @@
       
         <input class="myInput" ></input>
         <input class="value-input" name="priority"/>
-        <!-- <fieldset aria-hidden="true" class="autocomplete-fieldset"></fieldset> -->
       </div>
     </div>
     <!-- <div class="autocomplete" style="width:300px;" >
@@ -49,5 +49,7 @@
     </form>
 
     <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
   </body>
 </html>
