--- a/demo-page/components/autocomplete/css.css
+++ b/demo-page/components/autocomplete/css.css
@@ -32,7 +32,7 @@ body {
     width: 100%;
     border-style: solid;
     border-width: 1px;
-    border-radius: inherit;
+    border-radius: 4px;
     border-color: rgb(217, 217, 217);
     /* pointer-events: none;
     border-radius: inherit;
@@ -55,7 +55,6 @@ body {
   align-items: center;
   width: 100%;
   position: relative;
-  border-radius: 4px;
   padding-left: 14px;
   padding-right: 14px; 
   padding: 3px 9px;
@@ -70,7 +69,7 @@ body {
   inset: -5px 0px 0px;
   margin: 0px;
   pointer-events: none;
-  border-radius: inherit;
+  border-radius: 4px;
   border-style: solid;
   border-width: 1px;
   overflow: hidden;
@@ -121,7 +120,7 @@ body {
   padding-right: 12px;
   white-space: nowrap;
 }
-input {
+.myInput {
   font: inherit;
   letter-spacing: inherit;
   color: currentcolor;
@@ -136,7 +135,7 @@ input {
   width: 100%;
   animation-name: mui-auto-fill-cancel;
   animation-duration: 10ms;
-  padding: 10.5px 14px 10.5px 12px;
+  padding: 4px 4px;
   -webkit-box-flex: 1;
   flex-grow: 1;
   text-overflow: ellipsis;
@@ -166,7 +165,7 @@ input[type=submit] {
   border: 1px solid #d4d4d4;
   border-bottom: none;
   border-top: none;
-  z-index: 99;
+  z-index: 1500;
   /*position the autocomplete items to be the same width as the container:*/
   top: 100%;
   left: 0;
