--- a/demo-page/list-page/css.css
+++ b/demo-page/list-page/css.css
@@ -5,7 +5,9 @@
 div {
   font-family: Roboto, sans-serif;
 }
-
+summary {
+  font-family: Roboto, sans-serif;
+}
 a {
   font-family: Roboto, sans-serif;
 }
@@ -231,7 +233,6 @@ nav.primary-navigation li {
   text-align: center;
   font-family: arvo;
   margin: 0;
-  z-index: 1300;
 }
 
 nav.primary-navigation ul {
@@ -326,6 +327,7 @@ ul li ul li a {
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   border-radius: 4px;
   box-shadow: rgb(217 217 217) 0px 0px 0px 1px, rgb(109 110 111 / 8%) 0px 5px 20px 0px;
+  z-index: 1400;
 }
 
 .dropdown .selected {
